# python_uv_cpp_template

./: CMakeLists.txt  README.md  main.py  pyproject.toml
mypkg/: __init__.py
mypkg/cpp_eigen_module/: CMakeLists.txt  __init__.py  cpp_eigen_module_code.cpp  pyInterface.py
mypkg/cpp_zlib_module/: CMakeLists.txt  __init__.py  cpp_zlib_module_code.cpp  pyInterface.py
mypkg/mymodule/: __init__.py
