[project]
name = "python-uv-cpp-template"
version = "0.1.0"
description = "Python + C++ hybrid project built with pybind11 and scikit-build-core"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
]

[build-system]
requires = ["scikit-build-core>=0.7", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["mypkg"]
minimum-version = "0.7"
cmake.verbose = true
sdist.include = [
    "extern/zlib/include/**",
    "extern/zlib/lib/zlibstatic.lib",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "ninja>=1.13.0",
]
